--- a/index.html
+++ b/index.html
@@ -9,17 +9,9 @@
   </head>
   <body>
     <h1>Progrssive Web App (PWA) Template</h1>
-    <h2>What is a Progressive Web App ?</h2>
-    A Progressive Web App is a web app that delivers an app-like experience to users by using modern web capabilities. In the end, it's just your regular website that runs in a browser with some enhancements. It gives you the ability:
-    <p>Progressive web apps are a way to bring that native app feeling to a traditional web app. With PWAs we can enhance our website with mobile app features which increase usability and offer a great user experience.</p>
-    
-    <ul>
-        <li>To install it on a mobile home screen</li>
-        <li>To access it when offline</li>
-        <li>To access the camera</li>
-        <li>To get push notifications</li>
-        <li>To do background synchronization</li>
-    </ul>
+    <input type="text" name="iline" id="iline">
+    <input type="button" name="gbutton" id="gbutton" onclick="GenPassword()">
+
     <script src="app.js"></script>
   </body>
 </html>
