--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="manifest" href="manifest.json"/>
-    <title>Progressive Web Aapp Template</title>
+    <title>Pa$$w0rd Generator</title>
   </head>
   <body>
-    <h1>Progrssive Web App (PWA) Template</h1>
-    <input type="text" name="iline" id="iline">
-    <input type="button" name="gbutton" id="gbutton" onclick="GenPassword()">
+    <h1>Pa$$w0rd Generator</h1>
+    <input type="text" name="iline" id="iline" value="Type something here">
+    <input type="button" name="gbutton" id="gbutton" onclick="GenPassword()" value="Generate">
 
     <script src="app.js"></script>
   </body>
